Bug 1654 - [SW][common][phosphor-pid-control] - Adding intergral gain to algorithm
Symptom/Reason :
    - Improve algorithm
Root Cause     : N/A

Solution/Change:
    [common][phosphor-pid-control]
        - Improve algorithm

Entry Test     :
    <Check iGain is in config>
        sysadmin@starscream:~# cat /usr/share/swampd/config.json
        {
            "id": 1,
            "updateThermalsTimeMS": 1000,
            "pids": [
                {
                    "name": "pump-group",
                    "inputs": ["PUMP1_PWM"],
                },{
                    "name": "CPU_Temp",
                    "inputs": ["CPU1_Temp", "CPU2_Temp"],
                    "pid": {
                        "proportionalGains":{
                            "reading":{"0": 0.0,"1": 1.0,"2": 2.0,"3": 3.0,"4": 4.0,"5": 5.0,
                                "6": 6.0,"7": 7.0,"8": 8.0,"9": 9.0,"10": 10.0,"11": 11.0},
                            "output":{"0": 0.45,"1": 0.50,"2": 0.55,"3": 0.60,"4": 0.65,"5": 0.70,
                                "6": 0.75,"7": 0.80,"8": 0.85,"9": 0.90,"10": 0.95,"11": 1.0}
                        },
                        "integralGains":{
                            "reading":{"0": 0.0,"1": 1.0,"2": 2.0,"3": 3.0,"4": 4.0,"5": 5.0,
                                "6": 6.0,"7": 7.0,"8": 8.0,"9": 9.0,"10": 10.0,"11": 11.0
                            },
                            "output":{"0": 0.45,"1": 0.50,"2": 0.55,"3": 0.60,"4": 0.65,"5": 0.70,
                                "6": 0.75,"7": 0.80,"8": 0.85,"9": 0.90,"10": 0.95,"11": 1.0}
                        }
                    }
                }
            ]
        }
    <Check pid is startup>
        sysadmin@starscream:~# journalctl -u phosphor-pid-control
        Oct 06 19:38:14 starscream systemd[1]: Starting Phosphor-Pid-Control Margin-based Fan Control Daemon...
        Oct 06 19:38:59 starscream swampd[829]: Zone Id: 0
        Oct 06 19:38:59 starscream swampd[829]: PID name:

--- a/meta-inventec/meta-starscream/recipes-phosphor/fan-ctl/phosphor-pid-control/config.json
+++ b/meta-inventec/meta-starscream/recipes-phosphor/fan-ctl/phosphor-pid-control/config.json
@@ -724,6 +724,26 @@
                                 "5": 0.85,
                                 "6": 1.0
                             }
+                        },
+                        "integralGains":{
+                            "reading":{
+                                "0": 0.0,
+                                "1": 1.0,
+                                "2": 3.0,
+                                "3": 5.0,
+                                "4": 7.0,
+                                "5": 9.0,
+                                "6": 11.0
+                            },
+                            "output":{
+                                "0": 0.07,
+                                "1": 0.45,
+                                "2": 0.55,
+                                "3": 0.65,
+                                "4": 0.75,
+                                "5": 0.85,
+                                "6": 1.0
+                            }
                         }
                     }
                 },
@@ -792,6 +812,26 @@
                                 "5": 0.85,
                                 "6": 1.0
                             }
+                        },
+                        "integralGains":{
+                            "reading":{
+                                "0": 0.0,
+                                "1": 1.0,
+                                "2": 3.0,
+                                "3": 5.0,
+                                "4": 7.0,
+                                "5": 9.0,
+                                "6": 11.0
+                            },
+                            "output":{
+                                "0": 0.07,
+                                "1": 0.45,
+                                "2": 0.55,
+                                "3": 0.65,
+                                "4": 0.75,
+                                "5": 0.85,
+                                "6": 1.0
+                            }
                         }
                     }
                 },
@@ -819,6 +859,26 @@
                         "negativeHysteresis": 1.0,
                         "movingAveragePoint": 2,
                         "proportionalGains":{
+                            "reading":{
+                                "0": 0.0,
+                                "1": 1.0,
+                                "2": 3.0,
+                                "3": 5.0,
+                                "4": 7.0,
+                                "5": 9.0,
+                                "6": 11.0
+                            },
+                            "output":{
+                                "0": 0.07,
+                                "1": 0.45,
+                                "2": 0.55,
+                                "3": 0.65,
+                                "4": 0.75,
+                                "5": 0.85,
+                                "6": 1.0
+                            }
+                        },
+                        "integralGains":{
                             "reading":{
                                 "0": 0.0,
                                 "1": 1.0,
@@ -884,6 +944,26 @@
                         "negativeHysteresis": 1.0,
                         "movingAveragePoint": 2,
                         "proportionalGains":{
+                            "reading":{
+                                "0": 0.0,
+                                "1": 1.0,
+                                "2": 3.0,
+                                "3": 5.0,
+                                "4": 7.0,
+                                "5": 9.0,
+                                "6": 11.0
+                            },
+                            "output":{
+                                "0": 0.07,
+                                "1": 0.45,
+                                "2": 0.55,
+                                "3": 0.65,
+                                "4": 0.75,
+                                "5": 0.85,
+                                "6": 1.0
+                            }
+                        },
+                        "integralGains":{
                             "reading":{
                                 "0": 0.0,
                                 "1": 1.0,
