--- a/meta-inventec/meta-starscream/recipes-phosphor/fan-ctl/phosphor-pid-control/config_rmc.json
+++ b/meta-inventec/meta-starscream/recipes-phosphor/fan-ctl/phosphor-pid-control/config_rmc.json
@@ -620,7 +620,7 @@
             "minThermalOutput": 0.0,
             "failsafePercent": 60.0,
             "cycleIntervalTimeMS": 100,
-            "updateThermalsTimeMS": 5000,
+            "updateThermalsTimeMS": 1000,
             "pids": [
                 {
                     "name": "fan-group",
@@ -756,6 +756,36 @@
                                 "10": 0.95,
                                 "11": 1.0
                             }
+                        },
+                        "integralGains":{
+                            "reading":{
+                                "0": 0.0,
+                                "1": 1.0,
+                                "2": 2.0,
+                                "3": 3.0,
+                                "4": 4.0,
+                                "5": 5.0,
+                                "6": 6.0,
+                                "7": 7.0,
+                                "8": 8.0,
+                                "9": 9.0,
+                                "10": 10.0,
+                                "11": 11.0
+                            },
+                            "output":{
+                                "0": 0.45,
+                                "1": 0.50,
+                                "2": 0.55,
+                                "3": 0.60,
+                                "4": 0.65,
+                                "5": 0.70,
+                                "6": 0.75,
+                                "7": 0.80,
+                                "8": 0.85,
+                                "9": 0.90,
+                                "10": 0.95,
+                                "11": 1.0
+                            }
                         }
                     }
                 },
@@ -783,6 +813,36 @@
                         "negativeHysteresis": 1.0,
                         "movingAveragePoint": 2,
                         "proportionalGains":{
+                            "reading":{
+                                "0": 0.0,
+                                "1": 1.0,
+                                "2": 2.0,
+                                "3": 3.0,
+                                "4": 4.0,
+                                "5": 5.0,
+                                "6": 6.0,
+                                "7": 7.0,
+                                "8": 8.0,
+                                "9": 9.0,
+                                "10": 10.0,
+                                "11": 11.0
+                            },
+                            "output":{
+                                "0": 0.45,
+                                "1": 0.50,
+                                "2": 0.55,
+                                "3": 0.60,
+                                "4": 0.65,
+                                "5": 0.70,
+                                "6": 0.75,
+                                "7": 0.80,
+                                "8": 0.85,
+                                "9": 0.90,
+                                "10": 0.95,
+                                "11": 1.0
+                            }
+                        },
+                        "integralGains":{
                             "reading":{
                                 "0": 0.0,
                                 "1": 1.0,
@@ -886,6 +946,36 @@
                                 "10": 0.95,
                                 "11": 1.0
                             }
+                        },
+                        "integralGains":{
+                            "reading":{
+                                "0": 0.0,
+                                "1": 1.0,
+                                "2": 2.0,
+                                "3": 3.0,
+                                "4": 4.0,
+                                "5": 5.0,
+                                "6": 6.0,
+                                "7": 7.0,
+                                "8": 8.0,
+                                "9": 9.0,
+                                "10": 10.0,
+                                "11": 11.0
+                            },
+                            "output":{
+                                "0": 0.45,
+                                "1": 0.50,
+                                "2": 0.55,
+                                "3": 0.60,
+                                "4": 0.65,
+                                "5": 0.70,
+                                "6": 0.75,
+                                "7": 0.80,
+                                "8": 0.85,
+                                "9": 0.90,
+                                "10": 0.95,
+                                "11": 1.0
+                            }
                         }
                     }
                 }
@@ -896,7 +986,7 @@
             "minThermalOutput": 0.0,
             "failsafePercent": 100.0,
             "cycleIntervalTimeMS": 100,
-            "updateThermalsTimeMS": 5000,
+            "updateThermalsTimeMS": 1000,
             "pids": [
                 {
                     "name": "pump-group",
@@ -945,6 +1035,36 @@
                         "negativeHysteresis": 1.0,
                         "movingAveragePoint": 2,
                         "proportionalGains":{
+                            "reading":{
+                                "0": 0.0,
+                                "1": 1.0,
+                                "2": 2.0,
+                                "3": 3.0,
+                                "4": 4.0,
+                                "5": 5.0,
+                                "6": 6.0,
+                                "7": 7.0,
+                                "8": 8.0,
+                                "9": 9.0,
+                                "10": 10.0,
+                                "11": 11.0
+                            },
+                            "output":{
+                                "0": 0.45,
+                                "1": 0.50,
+                                "2": 0.55,
+                                "3": 0.60,
+                                "4": 0.65,
+                                "5": 0.70,
+                                "6": 0.75,
+                                "7": 0.80,
+                                "8": 0.85,
+                                "9": 0.90,
+                                "10": 0.95,
+                                "11": 1.0
+                            }
+                        },
+                        "integralGains":{
                             "reading":{
                                 "0": 0.0,
                                 "1": 1.0,
