phosphor-settings-manager porting

--- a/meta-inventec/meta-common/recipes-phosphor/settings/phosphor-settings-manager/power_cap.override.yml
+++ b/meta-inventec/meta-common/recipes-phosphor/settings/phosphor-settings-manager/power_cap.override.yml
@@ -10,7 +10,7 @@
           PowerCapEnable:
                Default: 'false'
           ExceptionAction:
-               Default: Cap::Action::None
+               Default: Cap::ExceptionActions::NoAction
           CorrectionTime:
                Default: 0
           SamplingPeriod:
