--- a/meta-inventec/meta-starscream/recipes-phosphor/gpio/gpio-event-handler/Makefile
+++ b/meta-inventec/meta-starscream/recipes-phosphor/gpio/gpio-event-handler/Makefile
@@ -3,7 +3,7 @@ CFILE  = *.cpp
 DEPPKGS = gio-unix-2.0 glib-2.0
 CC      ?= $(CROSS_COMPILE)g++
 CFLAGS += $(shell pkg-config --cflags $(DEPPKGS))
-CFLAGS += -std=c++1z
+CFLAGS += -std=c++20
 LIBS += $(shell pkg-config --libs $(LIBPKGS))
 LIBS += -fPIC -lrt -lm -lsystemd -lsdbusplus -lphosphor_dbus
 
