[Transformers][linux-aspeed] Upgrade to 2.14 porting

--- a/meta-inventec/meta-transformers/recipes-bsp/u-boot/u-boot-aspeed-sdk/ast2600-transformers.dts
+++ b/meta-inventec/meta-transformers/recipes-bsp/u-boot/u-boot-aspeed-sdk/ast2600-transformers.dts
@@ -4,6 +4,8 @@
 
 / {
 
+    compatible = "aspeed,ast2600-evb", "aspeed,ast2600";
+
 	memory {
 		device_type = "memory";
 		reg = <0x80000000 0x40000000>;
@@ -46,6 +48,14 @@
 	status = "okay";
 };
 
+&wdt2 {
+	status = "okay";
+};
+
+&wdt3 {
+	status = "okay";
+};
+
 &mdio {
         status = "okay";
         pinctrl-names = "default";
@@ -68,10 +78,8 @@
 
 &fmc {
 	status = "okay";
-#if 0
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_fmcquad_default>;
-#endif
 	flash@0 {
 		status = "okay";
 		spi-max-frequency = <50000000>;
@@ -231,5 +239,30 @@
 };
 
 &display_port {
+	status = "okay";
+};
+
+&scu {
+	mac0-clk-delay = <0x10 0x0a
+			  0x10 0x10
+			  0x10 0x10>;
+	mac1-clk-delay = <0x10 0x0a
+			  0x10 0x10
+			  0x10 0x10>;
+	mac2-clk-delay = <0x08 0x04
+			  0x08 0x04
+			  0x08 0x04>;
+	mac3-clk-delay = <0x08 0x04
+			  0x08 0x04
+			  0x08 0x04>;
+};
+
+&hace {
+	u-boot,dm-pre-reloc;
+	status = "okay";
+};
+
+&acry {
+	u-boot,dm-pre-reloc;
 	status = "okay";
 };
