--- a/meta-inventec/meta-transformers/conf/machine/transformers.conf
+++ b/meta-inventec/meta-transformers/conf/machine/transformers.conf
@@ -1,19 +1,23 @@
 KMACHINE = "aspeed"
 KERNEL_DEVICETREE = "${KMACHINE}-bmc-inventec-${MACHINE}.dtb"
 
-SOCSEC_SIGN_ENABLE = "0"
-
 require conf/machine/include/ast2600.inc
 require conf/machine/include/obmc-bsp-common.inc
 require conf/machine/include/inventec.inc
 
-UBOOT_MACHINE = "transformers-ast2600_defconfig"
+# UBOOT_MACHINE = "transformers-ast2600_defconfig"
 UBOOT_DEVICETREE = "ast2600-transformers"
+UBOOT_MACHINE = "ast2600_openbmc_spl_defconfig"
+# UBOOT_DEVICETREE = "ast2600-evb"
+SPL_BINARY = "spl/u-boot-spl.bin"
+SOCSEC_SIGN_ENABLE = "0"
 
 # To build a 64MB image, set FLASH_SIZE value to "65536".
 FLASH_SIZE = "65536"
 # Overwrite flash offsets
+FLASH_UBOOT_SPL_SIZE ?= "64"
 FLASH_UBOOT_OFFSET:flash-65536 = "0"
+FLASH_UBOOT_ENV_OFFSET:flash-65536 ?= "896"
 FLASH_KERNEL_OFFSET:flash-65536 = "1024"
 FLASH_ROFS_OFFSET:flash-65536 = "10240"
 FLASH_RWFS_OFFSET:flash-65536 = "43008"
@@ -21,14 +25,3 @@ FLASH_RWFS_OFFSET:flash-65536 = "43008"
 # If set to boolean true ('yes', 'y', 'true', 't', '1'), /var/log links to /var/volatile/log.
 # If set to boolean false ('no', 'n', 'false', 'f', '0'), /var/log is on persistent storage.
 VOLATILE_LOG_DIR = "false"
-
-
-# If set to boolean true ('yes', 'y', 'true', 't', '1'), /var/log links to /var/volatile/log.
-# If set to boolean false ('no', 'n', 'false', 'f', '0'), /var/log is on persistent storage.
-VOLATILE_LOG_DIR = "false"
-
-PREFERRED_PROVIDER_virtual/phosphor-ipmi-sensor-inventory = "transformers-ipmi-sensor-inventory-native"
-# PREFERRED_PROVIDER_virtual/phosphor-ipmi-fru-inventory = "transformers-ipmi-fru-inventory-native"
-# PREFERRED_PROVIDER_virtual/phosphor-ipmi-fru-read-inventory = "transformers-ipmi-fru-read-inventory-native"
-# PREFERRED_PROVIDER_virtual/phosphor-ipmi-fru-properties = "transformers-ipmi-fru-properties-native"
-PREFERRED_PROVIDER_virtual/phosphor-led-manager-config-native = "transformers-led-manager-config-native"
