--- a/meta-inventec/meta-transformers/recipes-bsp/u-boot/u-boot-aspeed-sdk/transformers-ast2600.cfg
+++ b/meta-inventec/meta-transformers/recipes-bsp/u-boot/u-boot-aspeed-sdk/transformers-ast2600.cfg
@@ -1,2 +1,26 @@
-CONFIG_CMD_EEPROM=y
 CONFIG_DEFAULT_DEVICE_TREE="ast2600-transformers"
+
+CONFIG_SYS_I2C=y
+CONFIG_DM_I2C_COMPAT=y
+
+CONFIG_BOOTARGS="console=ttyS4,115200n8 root=/dev/ram rw"
+CONFIG_BOOTCOMMAND="run bootspi"
+CONFIG_ENV_SIZE=0x20000
+CONFIG_ENV_OFFSET=0xE0000
+
+CONFIG_TARGET_EVB_AST2600A1=y
+CONFIG_ASPEED_H2X=y
+CONFIG_SPI_FLASH_GIGADEVICE=y
+CONFIG_DM_PCI_COMPAT=y
+
+CONFIG_OTP=y
+
+CONFIG_SHA512_ALGO=y
+CONFIG_SHA512=y
+CONFIG_SHA384=y
+
+CONFIG_HASH=y
+CONFIG_SPL_HASH=y
+CONFIG_RSA=y
+CONFIG_ECDSA=y
+
