Bug 1520 - - [Transformers-nuv][OpenBMC][WebUI] KVM is disconnected in WebGUI

--- a/meta-inventec/meta-transformers-nuv/recipes-kernel/linux/linux-nuvoton/buv-runbmc.cfg
+++ b/meta-inventec/meta-transformers-nuv/recipes-kernel/linux/linux-nuvoton/buv-runbmc.cfg
@@ -66,9 +66,15 @@ CONFIG_USB_CONFIGFS_F_HID=y
 
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_VIDEO_NUVOTON=y
-CONFIG_NPCM750_VCD=y
-CONFIG_NPCM750_ECE=y
 CONFIG_FORCE_MAX_ZONEORDER=12
+CONFIG_V4L_PLATFORM_DRIVERS=y
+CONFIG_VIDEO_V4L2=y
+#Enable Nuvoton video capture driver
+CONFIG_VIDEOBUF2_CORE=y
+CONFIG_VIDEOBUF2_V4L2=y
+CONFIG_VIDEOBUF2_MEMOPS=y
+CONFIG_VIDEOBUF2_DMA_CONTIG=y
+CONFIG_VIDEO_NPCM_VCD_ECE=y
 
 CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_NPCM_USB2=y
