--- a/meta-inventec/meta-transformers/recipes-bsp/u-boot/u-boot-aspeed-sdk/transformers-ast2600.cfg
+++ b/meta-inventec/meta-transformers/recipes-bsp/u-boot/u-boot-aspeed-sdk/transformers-ast2600.cfg
@@ -13,14 +13,13 @@ CONFIG_ASPEED_H2X=y
 CONFIG_SPI_FLASH_GIGADEVICE=y
 CONFIG_DM_PCI_COMPAT=y
 
+CONFIG_PRE_CONSOLE_BUFFER=y
+CONFIG_PRE_CON_BUF_SZ=4096
+CONFIG_PRE_CON_BUF_ADDR=0x10000000
+
 CONFIG_OTP=y
 
 CONFIG_SHA512_ALGO=y
 CONFIG_SHA512=y
 CONFIG_SHA384=y
-
-CONFIG_HASH=y
-CONFIG_SPL_HASH=y
-CONFIG_RSA=y
-CONFIG_ECDSA=y
 
