Enable dev mem in u-boot command to boot Linux

--- a/meta-inventec/meta-transformers/recipes-bsp/u-boot/u-boot-aspeed-sdk/transformers-ast2600.cfg
+++ b/meta-inventec/meta-transformers/recipes-bsp/u-boot/u-boot-aspeed-sdk/transformers-ast2600.cfg
@@ -3,7 +3,7 @@ CONFIG_DEFAULT_DEVICE_TREE="ast2600-transformers"
 CONFIG_SYS_I2C=y
 CONFIG_DM_I2C_COMPAT=y
 
-CONFIG_BOOTARGS="console=ttyS4,115200n8 root=/dev/ram rw"
+CONFIG_BOOTARGS="console=ttyS4,115200n8 root=/dev/ram rw mem.devmem=1 quiet"
 CONFIG_BOOTCOMMAND="run bootspi"
 CONFIG_ENV_SIZE=0x20000
 CONFIG_ENV_OFFSET=0xE0000
