[Starscream][bsp/kernel] Upgrade to 2.14 porting

--- a/meta-inventec/meta-starscream/recipes-bsp/u-boot/u-boot-aspeed-sdk/ast2600-starscream.dts
+++ b/meta-inventec/meta-starscream/recipes-bsp/u-boot/u-boot-aspeed-sdk/ast2600-starscream.dts
@@ -233,3 +233,13 @@
 &display_port {
 	status = "okay";
 };
+
+&hace {
+	u-boot,dm-pre-reloc;
+	status = "okay";
+};
+
+&acry {
+	u-boot,dm-pre-reloc;
+	status = "okay";
+};
