--- a/meta-inventec/meta-starscream/recipes-bsp/u-boot/u-boot-aspeed-sdk/starscream-ast2600.cfg
+++ b/meta-inventec/meta-starscream/recipes-bsp/u-boot/u-boot-aspeed-sdk/starscream-ast2600.cfg
@@ -1,2 +1,26 @@
-CONFIG_CMD_EEPROM=y
 CONFIG_DEFAULT_DEVICE_TREE="ast2600-starscream"
+CONFIG_SYS_I2C=y
+CONFIG_DM_I2C_COMPAT=y
+CONFIG_BOOTARGS="console=ttyS4,115200n8 root=/dev/ram rw mem.devmem=1 quiet"
+CONFIG_BOOTCOMMAND="run bootspi"
+CONFIG_ENV_SIZE=0x20000
+CONFIG_ENV_OFFSET=0xE0000
+CONFIG_TARGET_EVB_AST2600A1=y
+CONFIG_ASPEED_H2X=y
+CONFIG_SPI_FLASH_GIGADEVICE=y
+CONFIG_DM_PCI_COMPAT=y
+CONFIG_PRE_CONSOLE_BUFFER=y
+CONFIG_PRE_CON_BUF_SZ=4096
+CONFIG_PRE_CON_BUF_ADDR=0x10000000
+CONFIG_OTP=y
+CONFIG_SHA512_ALGO=y
+CONFIG_SHA512=y
+CONFIG_SHA384=y
+
+CONFIG_MAX31790_I2C=y
+CONFIG_BOOTDELAY=0
+CONFIG_CMD_PCI=y
+
+CONFIG_PCI=y
+CONFIG_DM_PCI=y
+CONFIG_PCIE_ASPEED=n
