--- a/meta-inventec/meta-starscream/conf/machine/starscream.conf
+++ b/meta-inventec/meta-starscream/conf/machine/starscream.conf
@@ -1,25 +1,25 @@
 KMACHINE = "aspeed"
 KERNEL_DEVICETREE = "${KMACHINE}-bmc-inventec-${MACHINE}.dtb"
 
-SOCSEC_SIGN_ENABLE = "0"
-
 require conf/machine/include/ast2600.inc
 require conf/machine/include/obmc-bsp-common.inc
 require conf/machine/include/inventec.inc
 
-UBOOT_MACHINE = "starscream-ast2600_defconfig"
 UBOOT_DEVICETREE = "ast2600-starscream"
+UBOOT_MACHINE = "ast2600_openbmc_spl_defconfig"
+SPL_BINARY = "spl/u-boot-spl.bin"
+SOCSEC_SIGN_ENABLE = "0"
 
 # To build a 64MB image, set FLASH_SIZE value to "65536".
 FLASH_SIZE = "65536"
 # Overwrite flash offsets
-FLASH_UBOOT_OFFSET = "0"
-FLASH_KERNEL_OFFSET = "1024"
-FLASH_ROFS_OFFSET = "10240"
-FLASH_RWFS_OFFSET = "43008"
+FLASH_UBOOT_SPL_SIZE ?= "64"
+FLASH_UBOOT_OFFSET:flash-65536 = "0"
+FLASH_UBOOT_ENV_OFFSET:flash-65536 ?= "896"
+FLASH_KERNEL_OFFSET:flash-65536 = "1024"
+FLASH_ROFS_OFFSET:flash-65536 = "10240"
+FLASH_RWFS_OFFSET:flash-65536 = "43008"
 
 # If set to boolean true ('yes', 'y', 'true', 't', '1'), /var/log links to /var/volatile/log.
 # If set to boolean false ('no', 'n', 'false', 'f', '0'), /var/log is on persistent storage.
 VOLATILE_LOG_DIR = "false"
-
-PREFERRED_PROVIDER_virtual/phosphor-led-manager-config-native = "starscream-led-manager-config-native"
