[Starscream] Resolve build error

--- a/meta-inventec/meta-starscream/conf/machine/starscream.conf
+++ b/meta-inventec/meta-starscream/conf/machine/starscream.conf
@@ -23,3 +23,5 @@ FLASH_RWFS_OFFSET:flash-65536 = "43008"
 # If set to boolean true ('yes', 'y', 'true', 't', '1'), /var/log links to /var/volatile/log.
 # If set to boolean false ('no', 'n', 'false', 'f', '0'), /var/log is on persistent storage.
 VOLATILE_LOG_DIR = "false"
+
+PREFERRED_PROVIDER_virtual/phosphor-led-manager-config-native = "starscream-led-manager-config-native"
