--- a/meta-inventec/meta-transformers/recipes-kernel/linux/linux-aspeed/arch/arm/boot/dts/aspeed-bmc-inventec-transformers.dts
+++ b/meta-inventec/meta-transformers/recipes-kernel/linux/linux-aspeed/arch/arm/boot/dts/aspeed-bmc-inventec-transformers.dts
@@ -366,6 +366,131 @@
         status = "okay";
 };
 
+&pwm_tacho {
+        status = "okay";
+        pinctrl-names = "default";
+        pinctrl-0 = <&pinctrl_pwm0_default &pinctrl_tach0_default
+                        &pinctrl_pwm1_default &pinctrl_tach1_default
+                        &pinctrl_pwm2_default &pinctrl_tach2_default
+                        &pinctrl_pwm3_default &pinctrl_tach3_default
+                        &pinctrl_pwm4_default &pinctrl_tach4_default
+                        &pinctrl_pwm5_default &pinctrl_tach5_default
+                        &pinctrl_pwm6_default &pinctrl_tach6_default
+                        &pinctrl_pwm7_default &pinctrl_tach7_default
+                                              &pinctrl_tach8_default
+                                              &pinctrl_tach9_default
+                                              &pinctrl_tach10_default
+                                              &pinctrl_tach11_default
+                                              &pinctrl_tach12_default
+                                              &pinctrl_tach13_default
+                                              &pinctrl_tach14_default
+                                              &pinctrl_tach15_default>;
+     fan@0 {
+        reg = <0x00>;
+        aspeed,target_pwm = <25000>;
+        cooling-levels = <125 151 177 203 229 255>;
+        aspeed,fan-tach-ch = <0x00>;
+        aspeed,min_rpm = <750000>;
+     };
+
+     fan@1 {
+        reg = <0x01>;
+        aspeed,target_pwm = <25000>;
+        cooling-levels = <125 151 177 203 229 255>;
+        aspeed,fan-tach-ch = <0x01>;
+        aspeed,min_rpm = <750000>;
+     };
+
+     fan@2 {
+        reg = <0x02>;
+        aspeed,target_pwm = <25000>;
+        cooling-levels = <125 151 177 203 229 255>;
+        aspeed,fan-tach-ch = <0x02>;
+        aspeed,min_rpm = <750000>;
+     };
+
+     fan@3 {
+        reg = <0x03>;
+        aspeed,target_pwm = <25000>;
+        cooling-levels = <125 151 177 203 229 255>;
+        aspeed,fan-tach-ch = <0x03>;
+        aspeed,min_rpm = <750000>;
+     };
+
+     fan@4 {
+        reg = <0x04>;
+        aspeed,target_pwm = <25000>;
+        cooling-levels = <125 151 177 203 229 255>;
+        aspeed,fan-tach-ch = <0x04>;
+        aspeed,min_rpm = <750000>;
+     };
+
+     fan@5 {
+        reg = <0x05>;
+        aspeed,target_pwm = <25000>;
+        cooling-levels = <125 151 177 203 229 255>;
+        aspeed,fan-tach-ch = <0x05>;
+        aspeed,min_rpm = <750000>;
+     };
+
+     fan@6 {
+        reg = <0x06>;
+        aspeed,target_pwm = <25000>;
+        cooling-levels = <125 151 177 203 229 255>;
+        aspeed,fan-tach-ch = <0x06>;
+        aspeed,min_rpm = <750000>;
+     };
+
+     fan@7 {
+        reg = <0x07>;
+        aspeed,target_pwm = <25000>;
+        cooling-levels = <125 151 177 203 229 255>;
+        aspeed,fan-tach-ch = <0x07>;
+        aspeed,min_rpm = <750000>;
+     };
+
+     fan@8 {
+        reg = <0x08>;
+        aspeed,fan-tach-ch = <0x08>;
+     };
+
+     fan@9 {
+        reg = <0x09>;
+        aspeed,fan-tach-ch = <0x09>;
+     };
+
+     fan@10 {
+        reg = <0x0a>;
+        aspeed,fan-tach-ch = <0x0a>;
+     };
+
+     fan@11 {
+        reg = <0x0b>;
+        aspeed,fan-tach-ch = <0x0b>;
+     };
+
+     fan@12 {
+        reg = <0x0c>;
+        aspeed,fan-tach-ch = <0x0c>;
+     };
+
+     fan@13 {
+        reg = <0x0d>;
+        aspeed,fan-tach-ch = <0x0d>;
+     };
+
+     fan@14 {
+        reg = <0x0e>;
+        aspeed,fan-tach-ch = <0x0e>;
+     };
+
+     fan@15 {
+        reg = <0x0f>;
+        aspeed,fan-tach-ch = <0x0f>;
+     };
+
+};
+
 &gpio0 {
         status = "okay";
         gpio-line-names =
