[Transformers][ipmid] - resolve core-dump

--- a/meta-inventec/meta-common/recipes-phosphor/ipmi/phosphor-ipmi-host/phosphor-ipmi-host.service
+++ b/meta-inventec/meta-common/recipes-phosphor/ipmi/phosphor-ipmi-host/phosphor-ipmi-host.service
@@ -1,7 +1,8 @@
 [Unit]
 Description=Phosphor Inband IPMI
-Wants=clear-once.service
+Wants=clear-once.service xyz.openbmc_project.Settings.service
 DefaultDependencies=no
+After=xyz.openbmc_project.Settings.service
 
 [Service]
 Restart=always
